bugfix for height on mobile

--- a/_scss/component/section.scss
+++ b/_scss/component/section.scss
@@ -27,6 +27,7 @@
 
 	&#intro {
 		min-height: 100vh;
+		min-height: calc(var(--vh, 1vh) * 100);
 		#canvas {
 			opacity: 0.2;
 		}
